[package]
name = "saga-seeker-html2md"
version = "1.2.0"
edition = "2021"
license = "MIT"
description = "Windows CLI tool that converts local HTML character sheets into Markdown."

[dependencies]
encoding_rs = "0.8"
html-to-markdown-rs = "3"
kuchiki = "0.8"
serde_json = "1"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = "symbols"
panic = "abort"
